--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,10 @@
   "description": "API for Badger CMS",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts"
+    "start": "nodemon",
+    "db:setup": "ts-node ./src/test/dbSetup.ts",
+    "build": "tsc",
+    "test": "npm run db:setup && jest"
   },
   "repository": {
     "type": "git",
@@ -29,13 +32,19 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.0.0-pre.40",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.2",
+    "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
+    "@types/rewire": "^2.5.28",
     "@types/uuid": "^3.4.5",
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.1",
+    "rewire": "^4.0.1",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
+    "ts-node-dev": "^1.0.0-pre.40",
     "typescript": "^3.5.3"
   }
 }
