fixed unhandled promise rejection in user service test

--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon",
     "db:setup": "ts-node ./src/test/dbSetup.ts",
     "build": "tsc",
-    "test": "npm run db:setup && jest"
+    "test": "npm run db:setup && jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "rewire": "^4.0.1",
+    "testdouble": "^3.12.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "ts-node-dev": "^1.0.0-pre.40",
