--- a/api/package.json
+++ b/api/package.json
@@ -21,34 +21,28 @@
   "homepage": "https://github.com/cbadger85/badger-cms#readme",
   "dependencies": {
     "@graphql-modules/core": "^0.7.8",
+    "@hapi/joi": "^15.1.0",
     "apollo-server-express": "^2.7.0",
     "bcryptjs": "^2.4.3",
-    "class-validator": "^0.9.1",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.9",
-    "type-graphql": "^0.17.4",
-    "typedi": "^0.8.0",
     "typeorm": "^0.2.18",
-    "typeorm-typedi-extensions": "^0.2.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.2",
+    "@types/hapi__joi": "^15.0.3",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
-    "@types/rewire": "^2.5.28",
     "@types/uuid": "^3.4.5",
     "jest": "^24.8.0",
     "nodemon": "^1.19.1",
-    "rewire": "^4.0.1",
-    "testdouble": "^3.12.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
-    "ts-node-dev": "^1.0.0-pre.40",
     "typescript": "^3.5.3"
   }
 }
