--- a/api/tsconfig.build.json
+++ b/api/tsconfig.build.json
@@ -26,6 +26,6 @@
     "baseUrl": ".",
     "rootDir": "src"
   },
-  // "exclude": ["node_modules", "**/*.spec.ts"],
+  "exclude": ["node_modules", "**/*.spec.ts", "src/test-utils/**/*.*"],
   "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
