--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon",
     "db:setup": "ts-node ./src/test-utils/dbSetup.ts",
     "build": "tsc --project tsconfig.build.json",
-    "test": "npm run db:setup && jest --verbose"
+    "test": "npm run db:setup && jest --verbose",
+    "bootstrap": "ts-node ./src/bootstrap.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "@hapi/joi": "^15.1.0",
     "apollo-server-express": "^2.7.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "reflect-metadata": "^0.1.13",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.2",
     "@types/hapi__joi": "^15.0.3",
