--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon",
     "db:setup": "ts-node ./src/test-utils/dbSetup.ts",
-    "test": "npm run db:setup && jest --verbose --runInBand",
+    "test": "npm run db:setup && jest --verbose",
     "build": "npm test && tsc --project tsconfig.build.json",
     "bootstrap:dev": "ts-node ./src/bootstrap.ts",
     "bootstrap": "npm run build && node ./dist/bootstrap.js",
@@ -30,6 +30,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^4.0.9",
     "typeorm": "^0.2.18",
@@ -42,6 +43,7 @@
     "@types/graphql": "^14.2.2",
     "@types/hapi__joi": "^15.0.3",
     "@types/jest": "^24.0.15",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^12.6.8",
     "@types/uuid": "^3.4.5",
     "jest": "^24.8.0",
